Huge Updates
Change Atlauncher to Modrinth App
Change JVM Flag
Change GraalVM to Adoptium
Remove Large Page